Fix for nonscrolling modals on ios webkit browsers

--- a/themes/finna2/less/finna/feed.less
+++ b/themes/finna2/less/finna/feed.less
@@ -341,6 +341,10 @@
     margin-bottom: 15px;
 }
 
+.feed-content {
+    -webkit-overflow-scrolling: auto ;
+}
+
 // rss-feeds on content page
 .main.template-dir-feedcontent.template-name-content {
     .feed-content {
